hphp/test/slow/traits/fatal_missing_trait.php.expectf

Fatal error: Unknown trait 'T' in %s/test/slow/traits/fatal_missing_trait.php on line 7
